# Apogee

./: .env.example  .gitignore  README.md  docker-compose.yml  models.py  pipeline.py  pyproject.toml  ranker.py
.agents/rules/: architecture.md  data-contracts.md  deliveries-pipeline.md  product-management.md  stack.md
.agents/workflows/: add-worker.md  new-agent.md  new-migration.md
agents/: __init__.py  asset_generator.py  fact_checker.py  postprocess.py  render.py  researcher.py  scriptwriter.py  storyboard_director.py  topic_miner.py  tts.py
analytics/: queries.sql
apogee/: __init__.py
apogee/workers/: __init__.py
docs/: design-system.md
migrations/: 001_initial_schema.sql  002_add_renders_fps_render_time.sql  002_renders_final_path.sql  003_assets_origin_checksum.sql  004_performance_daily_youtube_metrics.sql
output/storyboards/: 390318b4-df7a-42b7-a78a-1c7dcc319ea2.json
remotion/: package-lock.json  package.json  remotion.config.js
remotion/public/: input_props.json
remotion/src/: Root.jsx  utils.jsx
remotion/src/compositions/: ShortExplainer.jsx
remotion/src/hooks/: HookNumber.jsx  HookQuestion.jsx  HookSplit.jsx  HookText.jsx  HookZoom.jsx
remotion/src/themes/: index.js
scripts/: alerting.py  apply_migrations.py  check_env.py  import_metrics.py  prepare_remotion.py  seed_channel.py  smoke_test.py  smoke_test_render.py  start_workers.sh  verify_langsmith.py
workers/: fact_checker_worker.py  researcher_worker.py  scriptwriter_worker.py  topic_miner_worker.py
